@@ -3,6 +3,9 @@ Version: 0.4.15
 Date: 30.1.26
   Changes:
     - 3x multiplier to all roboports "charging_station_count" if Quality mod is detected & 1 if not quality enabled.
+    - SeaBlock Progress to Power Armour made to trigger tech.
+    - Trigger tech values for Angles.
+    - Trigger tech values for Base.
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.14
 Date: 29.1.26
